; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/lib/extr_spinlock.c__raw_read_lock_wait_flags.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/lib/extr_spinlock.c__raw_read_lock_wait_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@spin_retry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_raw_read_lock_wait_flags(%struct.TYPE_4__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @spin_retry, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @local_irq_restore(i64 %8)
  br label %10

10:                                               ; preds = %2, %21, %37
  %11 = load i32, i32* %6, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %6, align 4
  %13 = icmp sle i32 %11, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = call i32 (...) @_raw_yield()
  %16 = load i32, i32* @spin_retry, align 4
  store i32 %16, i32* %6, align 4
  br label %17

17:                                               ; preds = %14, %10
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = call i32 @__raw_read_can_lock(%struct.TYPE_4__* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %17
  br label %10

22:                                               ; preds = %17
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, 2147483647
  store i32 %26, i32* %5, align 4
  %27 = call i32 (...) @local_irq_disable()
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* %5, align 4
  %32 = add i32 %31, 1
  %33 = call i32 @_raw_compare_and_swap(i32* %29, i32 %30, i32 %32)
  %34 = load i32, i32* %5, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %22
  ret void

37:                                               ; preds = %22
  br label %10
}

declare dso_local i32 @local_irq_restore(i64) #1

declare dso_local i32 @_raw_yield(...) #1

declare dso_local i32 @__raw_read_can_lock(%struct.TYPE_4__*) #1

declare dso_local i32 @local_irq_disable(...) #1

declare dso_local i32 @_raw_compare_and_swap(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
